Fixed overflow

--- a/common/TextOnlyElement/styles.css
+++ b/common/TextOnlyElement/styles.css
@@ -7,5 +7,17 @@
 
 .shadowWrapper {
   composes: wrapper;
-  height: 200px;
+  height: 120px;
+  position: relative;
+  overflow: hidden;
+}
+
+.gradient {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background: linear-gradient(to bottom, rgba(96,125,139,0) 0%, rgba(96,125,139,1) 77%, rgba(96,125,139,1) 100%);
+  padding-bottom: 30px;
 }
